Fixed body text spacing when adding large amounts of text

--- a/app/components/cms_resource_card_component/cms_resource_card_component.scss
+++ b/app/components/cms_resource_card_component/cms_resource_card_component.scss
@@ -28,6 +28,10 @@
       padding-right: 10px;
     }
   }
+
+  &__body-text {
+    flex-grow: 1;
+  }
 }
 
 .ncce-button--white {
